[package]
name = "faxer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
escpos = { version = "0.16.0", features = ["full"] }
html-escape = "0.2.13"
log = "0.4.27"
regex = { version = "1.11.1", features = ["pattern"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tiny_http = "0.12.0"
