[package]
name = "faxer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cookie = "0.18.1"
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
escpos = { version = "0.16.0", features = ["full"] }
futures = { version = "0.3.31", features = ["futures-executor"] }
html-escape = "0.2.13"
html_parser = "0.7.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand = "0.9.1"
regex = { version = "1.11.1", features = ["pattern"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
tiny_http = "0.12.0"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread"] }
ureq = { version = "3.0.12", features = ["json"] }
url = "2.5.4"
